apps/pk8s/infra/bastion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion
  namespace: infra
spec:
  replicas: 0
  selector:
    matchLabels:
      io.kompose.service: bastion
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: bastion
    spec:
      containers:
        - env:
            - name: PGID
              value: "1001"
            - name: PUID
              value: "1001"
            - name: TZ
              value: Europe/Madrid
            - name: PUBLIC_KEY_URL
              value: https://github.com/linuxmaniac.keys
            - name: USER_NAME
              value: vseva
          image: lscr.io/linuxserver/openssh-server:9.7_p1-r3-ls160 # {"$imagepolicy": "infra:openssh-server"}
          name: bastion
          stdin: true
          tty: true
          resources: {}
          ports:
            - name: ssh
              containerPort: 2222
          livenessProbe:
            tcpSocket:
              port: ssh
            initialDelaySeconds: 2
          volumeMounts:
            - mountPath: /config
              name: bastion-config
            - mountPath: /custom-cont-init.d
              name: bastion-custom-init
            - mountPath: /config/.gnupg/gpg.conf
              name: bastion-custom-config
              subPath: gpg.conf
            - mountPath: /config/.gnupg/gpg-agent.conf
              name: bastion-custom-config
              subPath: gpg-agent.conf
            - mountPath: /config/gpg-agent.zsh
              name: bastion-custom-config
              subPath: gpg-agent.zsh
            - mountPath: /config/.zshrc
              name: bastion-custom-config
              subPath: zshrc
      restartPolicy: Always
      volumes:
        - name: bastion-config
          persistentVolumeClaim:
            claimName: bastion-config
        - name: bastion-custom-init
          configMap:
            name: bastion-custom-init
        - name: bastion-custom-config
          configMap:
            name: bastion-custom-config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: external-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.5.241
  labels:
    io.kompose.service: bastion
  name: bastion
  namespace: infra
spec:
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
  type: LoadBalancer
  selector:
    io.kompose.service: bastion
